--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
             <li>Bonus : I like pixel art so all background in blog is pixel art :3</li>
           </ul>
           <div class="mt-6 text-right">
-            <a href="home.html" class="text-white hover:text-white/80 transition-colors font-mono text-lg">< Home</a>
+            <a href="index.html" class="text-white hover:text-white/80 transition-colors font-mono text-lg">< Home</a>
           </div>
         </div>
       </div>
