--- a/whoami.html
+++ b/whoami.html
@@ -110,7 +110,7 @@
             <li><a href="https://www.facebook.com/profile.php?id=100074317220912">facebook ~ My facebook UWU</a></li>
           </ul>
           <div class="mt-6 text-right">
-            <a href="home.html" class="text-white hover:text-white/80 transition-colors font-mono text-lg">< Home</a>
+            <a href="index.html" class="text-white hover:text-white/80 transition-colors font-mono text-lg">< Home</a>
           </div>
         </div>
       </div>
