--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
           <h1 class="text-4xl font-bold mb-4">~ about me</h1>
           <ul class="list-disc pl-5 space-y-2 text-lg font-mono">
             <li>he or him 😐</li>
-            <li>Alone Dev , Student , Gamer and Sometime is a Wibu And Have A lover</li>
+            <li>Alone Dev , Student , Gamer and Sometime is a Wibu</li>
             <li>I So love work alone @@ ,In the moment write this i play minecraft and hsr</li>
             <li>I So love tech and usually use java to code some plugin for minecraft</li>
             <li>Main programming language is java , js . I know a bit C# , Mysql </li>
